pug.log
/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2490
  throw err
  ^

SyntaxError: Unexpected token (803:0)
    at Parser.pp$4.raise (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2488:13)
    at Parser.pp.unexpected (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:623:8)
    at Parser.pp$3.parseExprAtom (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2011:10)
    at Parser.pp$3.parseExprSubscripts (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1872:19)
    at Parser.pp$3.parseMaybeUnary (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1849:17)
    at Parser.pp$3.parseExprOps (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1791:19)
    at Parser.pp$3.parseMaybeConditional (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1774:19)
    at Parser.pp$3.parseMaybeAssign (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1750:19)
    at Parser.pp$1.parseVar (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1087:26)
    at Parser.pp$1.parseVarStatement (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:972:8) {
  pos: 38206,
  loc: Position { line: 803, column: 0 },
  raisedAt: 38207
}
/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2490
  throw err
  ^

SyntaxError: Unexpected token (803:0)
    at Parser.pp$4.raise (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2488:13)
    at Parser.pp.unexpected (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:623:8)
    at Parser.pp$3.parseExprAtom (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:2011:10)
    at Parser.pp$3.parseExprSubscripts (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1872:19)
    at Parser.pp$3.parseMaybeUnary (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1849:17)
    at Parser.pp$3.parseExprOps (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1791:19)
    at Parser.pp$3.parseMaybeConditional (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1774:19)
    at Parser.pp$3.parseMaybeAssign (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1750:19)
    at Parser.pp$1.parseVar (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:1087:26)
    at Parser.pp$1.parseVarStatement (/usr/lib/node_modules/pug-cli/node_modules/acorn/dist/acorn.js:972:8) {
  pos: 39148,
  loc: Position { line: 803, column: 0 },
  raisedAt: 39149
}
